resources/css/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    font-family: 'DM Sans', Arial, sans-serif;
    font-size: 16px;
    color: #7b828e;
    text-align: center;
}

body {
    margin: 1rem;
}

h1 {
    font-size: 3.5rem;
    line-height: 1.2;
    padding: 1.5rem 0 2rem 0;
}

h2 {
    font-size: 2.9rem;
    line-height: 1.2;
    padding: 1.5rem 0 2rem 0;
}

h3 {
    font-size: 2.5rem;
    line-height: 1.2;
    padding: 1.5rem 0;
}

h4 {
    font-size: 1.7rem;
    font-weight: 500;
    line-height: 1.5;
    padding: 1.5rem 0 2rem 0;
}

h5 {
    font-size: 1.2rem;
    font-weight: 500;
    line-height: 1.5;
    padding: 1rem 0 1.25rem 0;
}

p { 
    font-size: 1rem;
    font-family: 'Merriweather Sans', Arial, sans-serif;
}


/* About section */

.image-panel {
    display: flex;
    flex-flow: column;
    align-items: center;
    height: 70rem;
    width: 100%;
    padding: 10rem 2rem;
}

.image-panel img {
    height: 20rem;
    width: auto;
    padding: 1rem;
}

.image-panel .text-item {
    text-align: center;
    line-height: 2rem;
    height: auto;
    width: 50rem;
    padding: 2rem 0 4rem 0;
}


/* Navigation */

.table {
    display: table;
    margin: 0 auto;
}

.table ul {
    list-style-type: none;
}

.table li {
    padding: 0 3rem;
    display: inline;
    font-size: 1.2rem;
}



/* Portfolio section */

.image-grid-panel {
    height: 50rem;
    width: 100%;
    padding: 2rem;
}

.grid {
    display: flex;
    justify-content: center;
}

.grid-item {
    position: relative;
    margin: 2px;
    padding: 2px;
}

.grid-item a {
    position: absolute;
    top: 2.5rem;
    left: 2.5rem;
    right: 2.5rem;
    bottom: 2.5rem;
    color: hsl(79, 18%, 42%);
    text-decoration: none;
}

.grid-item img {
    width: 27.5rem;
}


/* CV section */

.image-and-text-panel {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    height: 45rem;
    width: 100%;
    padding: 1rem;
}

.image-and-text-panel img {
    height: auto;
    width: 20%;
    padding: 2rem;
}

.image-and-text-panel .text-item {
    float: left;
    line-height: 2.5rem;
    height: auto;
    width: 44rem;
    padding: 0 4rem;
}

.image-and-text-panel .text-item p {
    padding: 1rem 0;
}


/* Contact section */

.social-panel {
    display: block;
    height: 250px;
    width: 100%;
    padding: 3rem 1rem 1rem 1rem;
    background-color: hsl(79, 18%, 42%);
}

.social-panel .footer-heading {
    display: inline;
    font-size: 2rem;
    color:white;
}

.social-icons {
    display: flex;
    justify-content: center;
    align-items: center;
}

.social-icons i.fa.fa-linkedin {
    font-size: 3rem;
    color:white;
    padding: 2rem;
}

.social-icons .email a {
    font-size: 1.25rem;
    font-weight: 300;
    color:white;
    text-decoration: none;
    padding: 2rem;
}

.social-icons i.fa.fa-github {
    font-size: 3.75rem;
    color:white;
    padding: 2rem;
}






/* Grey background and grey button 

.button {
    text-align: center;
    background-color: #4a4a4a;
    width: 400px;
    height: 3rem;
    border-radius: 2px;
}

.button p {
    color: #ffffff;
    font-size: 1.2rem;
    font-weight: 200;
    line-height: 1.7;
    text-align: center;
    padding: 8px;
}

.grey {
    background-color: #d8d8d8;
}

.grey p {
    color: #4a4a4a;
}


/* Main banner 

#banner {
    background-color: #d8d8d8;
    width: 100%;
    height: 600px;
}

#banner img {
    float: left;
    width: 50%;
    height: auto;
    padding: 2rem 3rem 2rem 2rem;
}

#banner .text-box {
    float: left;
    position: relative;
    height: auto;
    max-width: 400px;
    padding: 100px 120px 30px 0;
}


/* Information banner 

.information {
    width: 100%;
    height: 770px;
}

.information img {
    float: left;
    width: 50%;
    height: auto;
    padding: 2rem 3rem 2rem 2rem;
}

.information .information-box {
    float: left;
    color: #666666;
    width: 50%;
    padding: 0 3rem 2rem 2rem;
}

.information .quote {
    font-size: 1.2rem;
    font-weight: 200;
    line-height: 1.5;
}

.information .quote-by {
    font-size: 1rem;
    line-height: 5;
}

.information .grid-item {
    float: right;
    width: 40%;
    border: 1px solid #d8d8d8;
}

.information .grid-item img {
    width: 30%;
    padding: 1.65rem 1rem;
}

.information .grid-item-text {
    margin: 0 90px;
}

.information .grid-item p {
    padding: 8px 0;
    font-size: 1.1rem;
    line-height: 2;
}

.information .grid-item a {
    color: #2e7dff;
    font-size: 1.1rem;
    line-height: 2;
    text-decoration: none;
}


/* Courses banner 

.featuregrid {
    text-align: center;
}

.featuregrid .grid-item {
    display: inline-flex;
    flex-flow: column;
    width: 350px;
    height: auto;
    background-color: #ffffff;
    margin: 16px;
}

.featuregrid img {
    width: inherit;
    height: auto;
}

.featuregrid .text-box {
    padding: 24px 16px;
    min-height: 160px;
}

.featuregrid h2 {
    text-align: center;
}

.featuregrid h4 {
    padding: 10px 0 8px 0;
}

.featuregrid h5 {
    color: #848484;
    padding: 0 0 8px 0;
    font-weight: 300;
}

.featuregrid p { 
    color: #848484;
    font-weight: 300;
}


/* Video banner 

.videobanner {
    width: 100%;
    height: 770px;
    margin: 20px;
}

.videobanner video {
    float: left;
    width: 50%;
    height: auto;
    /*padding: 0 3rem 2rem 2rem;*/
}

/*

.videobanner .information-box {
    float: left;
    width: 50%;
    color: #666666;
    /*padding: 0 3rem 2rem 2rem;*/
}

/*

.videobanner .grid-item {
    display: inline-flex;
    width: 40%;
}

.videobanner .grid-item img {
    width: 30%;
    padding: 1.65rem 1rem;
}

.videobanner .grid-item-text {
    margin: 0 40px 0 0;
    align-self: center;
}

.videobanner .grid-item h4 {
    padding: 0;
}

.videobanner .grid-item p {
    color: #848484;
    font-size: 1rem;
    font-weight: 300;
    line-height: 1.5;
    padding: 10px 0 0 0;
}

.videobanner h2 {
    text-align: center;
}

.videobanner .quote {
    font-size: 1.2rem;
    font-weight: 200;
    line-height: 1.5;
}


/* Footer 

footer {
    width: auto; 
    height: 60px;
    border-top: 1px solid #ebebeb;
    padding: 16px 0 0 0;
    margin: 0 2rem 2rem;
}

footer .copyright {
    color: #4a4a4a;
    display: block;
    text-align: left;
}

footer #copyright-text {
    float: left;
}

footer #footer-links {
    display: flex;
    float: right;
}

footer #footer-links a {
    text-decoration: none;
    color: #4a4a4a;
    font-size: 1rem;
}

footer #terms-conditions {
    width: 4rem;
}

footer #privacy-policy {
}

